fixed the second dropdown menu being covered issue

--- a/app/assets/stylesheets/common/_navigation.scss
+++ b/app/assets/stylesheets/common/_navigation.scss
@@ -102,6 +102,7 @@ nav {
     left: 100%;
     position: absolute;
     width: 100%;
+    z-index:9999;
   }
 
   .sub,
